@@ -1096,3 +1096,7 @@ Add new math functions IMDIV, SUMPRODUCT  , SUMX2PY2 ,    SUMX2MY2    ,  SUM2XMY
 ----------------------------------------------------
 Add new functions IMCOS, IMSIN, IMPOWER, IMSQRT, IMEXP, IMLN
 Add new functions ISEVEN, ISODD, ODD, EVEN, DELTA
+
+2000-12-03-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+Now you can validate on integer
